src/test/deca/codegen/valid/decaObjet/cast/02double.deca
// Description:
//    cast d'une classe par sa classe mère
//
// Resultats:
//    0
//
// Historique:
//    cree le 21/06/2022

class A {
    int x = 0;
}

class B extends A{
    int x = 1;
}

{
    B b = new B();
    A a = (A)(b);
    println(a.x);
}
