src/test/deca/codegen/invalid/intermediaire2/arithmetiques/03divParZero.deca
// Description:
//    Programme minimaliste testant la division par 0
//
// Resultats:
//    Error: Overflow
//
// Historique:
//    cree le 08/06/2022

{
    float x = 1.0;
    x = x / 0;
}